Fixed HeroSection Horizontal Overflow

--- a/jamalyzer-client/styles/home/HeroSection.module.css
+++ b/jamalyzer-client/styles/home/HeroSection.module.css
@@ -32,7 +32,7 @@
   left: 50%;
   transform: translateX(-50%);
 
-  width: 100vw;
+  width: 100%;
   max-width: 150rem;
   height: 60rem;
 }
